@@ -37,3 +37,4 @@ doc/index.html
 
 APDescription.txt
 MTPs-Main-Container.txt
+demos/persistent-belief-base/bookstore.log
