@@ -2,4 +2,4 @@
 
 source "`dirname "$0"`/jason-setup"
 
-java -cp "$JASON_HOME/libs/*" jason.runtime.RunJasonProject $1
+java -cp "$JASON_HOME/libs/*" jason.runtime.RunJasonProject $*
