@@ -457,7 +457,7 @@ public class Config extends Properties {
 
     public String getJasonVersion() {
         //Package j = jason.util.ConfigGUI.class.getClassLoader().getDefinedPackage("jason.util");
-    	Package j = Package.getPackage("jason.util");
+        Package j = Package.getPackage("jason.util");
         if (j != null && j.getSpecificationVersion() != null) {
             return j.getSpecificationVersion();
         }
@@ -490,7 +490,7 @@ public class Config extends Properties {
 
     public String getJasonBuiltDate() {
         //Package j = jason.util.ConfigGUI.class.getClassLoader().getDefinedPackage("jason.util");
-    	Package j = Package.getPackage("jason.util");
+        Package j = Package.getPackage("jason.util");
         if (j != null) {
             return j.getImplementationVersion();
         }
