@@ -20,6 +20,7 @@ repositories {
     mavenCentral()
 
     maven { url "http://jacamo.sourceforge.net/maven2" }
+    maven { url "https://raw.github.com/jacamo-lang/mvn-repo/master" }
     maven { url "https://jade.tilab.com/maven/" }
     
     flatDir {
@@ -28,7 +29,7 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.jason-lang',     name: 'jason' ,   version: '<VERSION>'
+    compile group: 'org.jason',     name: 'jason' ,   version: '<VERSION>'
 }
 
 sourceSets {
@@ -46,6 +47,9 @@ task run (type: JavaExec, dependsOn: 'classes') {
     description 'runs the application'
     main = '<PROJECT-RUNNER-CLASS>'
     args '<PROJECT-FILE>'
+	// options:
+	//     args = ['<PROJECT-FILE>', '--debug']
+	//     args = ['<PROJECT-FILE>', '--log-conf', 'l.p'] // to use file l.p to configure logging
     classpath sourceSets.main.runtimeClasspath
 }
 
